tests/snapshots/run_wpt_conformance__litert_triangular_int32_2D_tensor_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "triangular.https.any.js",
    "triangular int32 2D tensor default options",
    "litert",
    "PASS",
)
