tests/snapshots/run_wpt_conformance__litert_where_float16_1D_constant_tensors.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "where.https.any.js",
    "where float16 1D constant tensors",
    "litert",
    "PASS",
)
